<resources>
    <string name="app_name">Covid-19</string>
    <string name="todo">TODO</string>
    <string name="name">Nombre: </string>
    <string name="edad">Edad:</string>
    <string name="nombre">Nombre</string>
    <string name="edad_field">Edad</string>
    <string name="click_en_la_estrella">Click en la estrella para informacion sobre tu riesgo personal!</string>
    <string name="texto">texto</string>
    <string name="virus">Virus</string>
    <string name="indicaciones">Indicaciones</string>
    <string name="sintomas">Sintomas</string>
    <string name="c19">Covid/19</string>
    <string name="comentar">Comentar</string>
    <string name="comenta_aqui">Comenta aqui</string>
    <string name="finalName">\"Nombre: \"</string>
</resources>
