<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="408dp"
            android:layout_height="162dp"
            android:contentDescription="@string/todo"
            android:scaleType="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/coronavirus" />

        <TextView
            android:id="@+id/name_text"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:text="@string/name"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/name_editText"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/star_button" />

        <TextView
            android:id="@+id/edad_text"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="16dp"
            android:text="@string/edad"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/edad_editText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_text" />

        <EditText
            android:id="@+id/name_editText"
            android:layout_width="264dp"
            android:layout_height="41dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="5dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/nombre"
            android:inputType="textPersonName"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/edad_editText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/name_text" />

        <EditText
            android:id="@+id/edad_editText"
            android:layout_width="279dp"
            android:layout_height="44dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/edad"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="@+id/edad_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_editText" />

        <ImageButton
            android:id="@+id/star_button"
            android:layout_width="49dp"
            android:layout_height="55dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="15dp"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toTopOf="@+id/name_editText"
            app:layout_constraintEnd_toStartOf="@+id/star_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView6"
            app:srcCompat="@android:drawable/star_big_on" />

        <TextView
            android:id="@+id/star_text"
            android:layout_width="294dp"
            android:layout_height="44dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="25dp"
            android:text="@string/click_en_la_estrella"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView6" />

        <TextView
            android:id="@+id/riesgo_text"
            android:layout_width="329dp"
            android:layout_height="132dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="15dp"
            android:text="@string/texto"
            android:textSize="24sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/star_button" />

        <Button
            android:id="@+id/virus_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="40dp"
            android:text="@string/virus"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/sintomas_button"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/sintomas_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sintomas"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/virus_button" />

        <Button
            android:id="@+id/indicaciones_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="25dp"
            android:text="@string/indicaciones"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/sintomas_button"
            app:layout_constraintTop_toTopOf="@+id/sintomas_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>